tests/baselines/reference/exportAssignDottedName.errors.txt
tests/cases/conformance/externalModules/foo1.ts(1,17): error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.


==== tests/cases/conformance/externalModules/foo2.ts (0 errors) ====
    import foo1 = require('./foo1');
    export = foo1.x; // Ok
    
==== tests/cases/conformance/externalModules/foo1.ts (1 errors) ====
    export function x(){
                    ~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
    	return true;
    }
    